--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jaam Digital</title>
 </head>
 <body>
-  <div id="react-root"></div>
+  <div id="root"></div>
   <script src="/build/bundle.js"></script>
 </body>
 </html>
